--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
+      <meta http-equiv="cache-control" content="no-cache" />
       <title>Walkthrough</title>
 
       <script
