--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,19 +3,19 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <meta http-equiv="cache-control" content="no-cache" />
       <title>Walkthrough</title>
 
       <script
          id="sap-ui-bootstrap"
-         src="https://openui5.hana.ondemand.com/1.38.9/resources/sap-ui-core.js" 
+         src="https://openui5.hana.ondemand.com/1.38.9/resources/sap-ui-cachebuster/sap-ui-core.js" 
          data-sap-ui-theme="sap_bluecrystal"
          data-sap-ui-libs="sap.m"
          data-sap-ui-compatVersion="edge"
          data-sap-ui-preload="async" 
          data-sap-ui-resourceroots='{
             "sap.ui.odataapp": "./"
-         }' >
+         }' 
+         data-sap-ui-appCacheBuster="./">
       </script>
       
       <script>
