--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 
       <script
          id="sap-ui-bootstrap"
-         src="https://openui5.hana.ondemand.com/1.38.9/resources/sap-ui-cachebuster/sap-ui-core.js" 
+         src="https://openui5.hana.ondemand.com/resources/sap-ui-cachebuster/sap-ui-core.js"
          data-sap-ui-theme="sap_bluecrystal"
          data-sap-ui-libs="sap.m"
          data-sap-ui-compatVersion="edge"
